@startuml

title __TANK GAME's Class Diagram__\n

  namespace TankGame {
    class TankGame.GameDashboard {
    }
  }
  

  namespace TankGame {
    class TankGame.GameKeys {
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      abstract class TankGame.GameObject.GameObject {
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Movable {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Projectile {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Movable {
        class TankGame.GameObject.Movable.Tank {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.BreakableWall {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.PowerUp {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.Unmovable {
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.Wall {
        }
      }
    }
  }
  

  namespace TankGame {
    class TankGame.GameObservable {
    }
  }
  

  namespace TankGame {
    class TankGame.GameSounds {
    }
  }
  

  namespace TankGame {
    class TankGame.TankWarGame {
    }
  }
  

  TankGame.GameDashboard -up-|> javax.swing.JPanel
  TankGame.GameDashboard o-- TankGame.GameObject.Movable.Tank : tank1
  TankGame.GameDashboard o-- TankGame.GameObject.Movable.Tank : tank2
  TankGame.GameKeys .up.|> java.awt.event.KeyListener
  TankGame.GameKeys -up-|> java.util.Observable
  TankGame.GameKeys o-- TankGame.GameObject.Movable.Tank : tank
  TankGame.GameObject.GameObject -up-|> javax.swing.JComponent
  TankGame.GameObject.Movable.Movable -up-|> TankGame.GameObject.GameObject
  TankGame.GameObject.Movable.Projectile .up.|> java.util.Observer
  TankGame.GameObject.Movable.Projectile -up-|> TankGame.GameObject.Movable.Movable
  TankGame.GameObject.Movable.Projectile o-- TankGame.TankWarGame : obj
  TankGame.GameObject.Movable.Projectile o-- TankGame.GameObject.Movable.Tank : p1
  TankGame.GameObject.Movable.Projectile o-- TankGame.GameObject.Movable.Tank : p2
  TankGame.GameObject.Movable.Tank .up.|> java.util.Observer
  TankGame.GameObject.Movable.Tank -up-|> TankGame.GameObject.Movable.Movable
  TankGame.GameObject.Movable.Tank o-- TankGame.TankWarGame : obj
  TankGame.GameObject.Movable.Tank o-- TankGame.GameObject.Movable.Tank : p1
  TankGame.GameObject.Movable.Tank o-- TankGame.GameObject.Movable.Tank : p2
  TankGame.GameObject.Unmovable.BreakableWall .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.BreakableWall -up-|> TankGame.GameObject.Unmovable.Wall
  TankGame.GameObject.Unmovable.PowerUp .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.PowerUp -up-|> TankGame.GameObject.Unmovable.Unmovable
  TankGame.GameObject.Unmovable.Unmovable -up-|> TankGame.GameObject.GameObject
  TankGame.GameObject.Unmovable.Wall .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.Wall -up-|> TankGame.GameObject.Unmovable.Unmovable
  TankGame.GameObservable -up-|> java.util.Observable
  TankGame.TankWarGame .up.|> java.lang.Runnable
  TankGame.TankWarGame o-- TankGame.GameDashboard : gameDashboard
  TankGame.TankWarGame o-- TankGame.GameObservable : gobs
  TankGame.TankWarGame o-- TankGame.GameKeys : keyinput1
  TankGame.TankWarGame o-- TankGame.GameKeys : keyinput2
  TankGame.TankWarGame o-- TankGame.GameSounds : music


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
